# dasi

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.rst  Rucio_Backend_Integration.md  pyrightconfig.json
.devcontainer/: dev.env  devcontainer.json  docker-compose.yml  post-create.sh  rucio-init-wrapper.sh  rucio-setup.sh
.devcontainer/certs/: private.key  public.crt
.devcontainer/minio/certs/: private.key  public.crt
.devcontainer/rucio/: README.md  rucio.cfg  rucio.cfg.example  rucio.conf.j2  s3boto3.py
.github/instructions/: ecmwf-dasi.instructions.md
.github/workflows/: build-deps.yml  cd.yml  ci.yml  deploy.yml
bundle/: CMakeLists.txt  Linux.cmake
cmake/: Config.cmake.in  InstallProject.cmake  ProjectSettings.cmake  install_project.cmake
docs/: conf.py  pyproject.toml
docs/source/: acknowledgements.rst  conf.py  usage.rst
docs/source/_autodoc/: pydasi.rst  python.rst
examples/: CMakeLists.txt
examples/copernicus/: assets.yaml  dasi.ipynb  metadata.yaml
examples/copernicus/assets/: schema
examples/copernicus/metadata/: schema
examples/cryoem/: dasi-config.yml
examples/histogram/: S3Credentials.yaml  archive_data.py  dasi.yaml  dasi_s3.yaml  helper.py  retrieve_data.py  wipe.py
examples/rucio/: README.md  archive.py  dasi.yml  file.nc  helper.py  list.py  pydasi.yml  retrieve.py  rucio.cfg
examples/simple_s3/: CMakeLists.txt  README.md  S3Config.yml  dasi.yaml  dasi.yml  schema
examples/simple_s3/minio/: docker-compose.yml
examples/simple_s3/src/: Archive.cc  Retrieve.cc
include/: CMakeLists.txt
include/dasi/api/: Dasi.h  dasi_c.h
include/dasi/api/detail/: ListDetail.h  PolicyDetail.h  RetrieveDetail.h
include/dasi/lib/: LibDasi.h
include/dasi/tools/: DASITool.h
pydasi/: CMakeLists.txt  MANIFEST.in  pyproject.toml
pydasi/src/: rucio_s3boto3.py
pydasi/src/backend/: __init__.py  _dasi_cffi.py
pydasi/src/backend/include/: dasi_c_cffi.h  dasi_cffi.h
pydasi/src/dasi/utils/: config.py
pydasi/src/pydasi/: __init__.py  dasi.py  key.py  list.py  query.py  retrieve.py  wipe.py
pydasi/src/pydasi/backend/: _dasi_cffi.py
pydasi/src/pydasi/rucio/: __init__.py  backend.py  list.py  retrieve.py
pydasi/src/pydasi/utils/: __init__.py  config.py  find_lib.py  version.py  version.py.in
pydasi/src/utils/: __init__.py  config.py  find_lib.py  log.py  version.py  version.py.in
pydasi/tests/: test_dasi_archive_retrieve.py  test_dasi_config.py  test_dasi_key.py  test_dasi_list.py  test_dasi_query.py  test_dasi_version.py
pydasi/tools/: build_header.py  generate_cffi.py
src/: CMakeLists.txt
src/api/: Dasi.cc  Key.cc  Query.cc  dasi_c.cc
src/api/detail/: ListDetail.cc  PolicyDetail.cc  RetrieveDetail.cc
src/impl/: ListGeneratorImpl.h  PolicyStatusGeneratorImpl.h  PurgeGeneratorImpl.h  RetrieveResultImpl.cc  RetrieveResultImpl.h  WipeGeneratorImpl.h
src/lib/: LibDasi.cc  dasi_version.h.in
src/tools/: CMakeLists.txt  DASITool.cc  dasi-info.cc  dasi-put.cc  dasi-schema.cc  dasi.in
tests/: CMakeLists.txt
tests/api/: CMakeLists.txt
tests/c_api/: CMakeLists.txt
