[project]
name = "pydasi"
description = "The Python interface to DASI (Data Access and Storage Interface)."
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
keywords = ["dasi", "ecmwf"]
dynamic = ["version"]
readme = { content-type = "text/markdown", file = "README.md" }
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.9"
dependencies = [
    "cffi>=1.15.0",
    "pyyaml>=6.0",
    "packaging>=22.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=6.0",
    "pytest-env",
    "pytest-cov",
]
dev = [
    "black>=22.0",
    "isort>=5.10",
    "mypy>=0.990",
    "ruff>=0.1.0",
]
all = ["pydasi[tests,dev]"]

[project.urls]
Homepage = "https://github.com/ecmwf-projects/dasi"
Documentation = "https://pydasi.readthedocs.io/"
Repository = "https://github.com/ecmwf-projects/dasi"
"Bug Tracker" = "https://github.com/ecmwf-projects/dasi/issues"
Changelog = "https://github.com/ecmwf-projects/dasi/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools >= 45.0", "cffi>=1.1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "backend*",
  "pydasi*",
  "utils*",
]
exclude = [
  "tests*",
]
# comment out to disable scanning PEP 420 namespaces (true by default)
# namespaces = false

[tool.setuptools.package-data]
"backend.include" = ["*.h"]
"backend.libs" = ["*.so", "*.dylib", "*.dll"]

[tool.setuptools.dynamic]
version = {attr = "utils.version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --strict-config --capture=no"
testpaths = ["tests"]
env = ["ECKIT_SERIOUS_BUG_IS_SILENT = 1"]
xfail_strict = true
filterwarnings = ["once::Warning"]
markers = ["slow", "parallel"]

# ruff configuration (replaces flake8)
[tool.ruff]
line-length = 80
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = ["E226", "E501", "W503"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

# Black formatting
[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
      .eggs
    | .git
    | .hg
    | .pytest_cache
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''
# isort
[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src"]
virtual_env = ".venv"

[tool.pyright]
include = ["src", "tests", "tools"]
exclude = ["**/node_modules", "**/__pycache__", "experimental", "typestubs"]
defineConstant = { DEBUG = true }
venvPath = ".venv"

[tool.tox]
envlist = ["py39", "py38", "pypy3"]

reportMissingImports = true
# reportMissingTypeStubs = false

pythonVersion = "3.8"

executionEnvironments = [{ root = "src" }]
